--- a/src/components/Content/Story/index.css
+++ b/src/components/Content/Story/index.css
@@ -10,6 +10,8 @@
 
 .storyText {
   padding: 10px;
+  font-size: 1em;
+  line-height: 2em;
 }
 
 .container {
