--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -6,17 +6,12 @@ nav {
   display: flex;
   justify-content: space-around;
   backdrop-filter: blur(3px);
-  font-size: 1em;
   padding: 5px 0;
-  /* height: 2.3em; */
+  font-size: 1.3em;
   align-items: center;
   box-shadow: 0px 0px 6px hsla(41, 80%, 40%, 0.5);
   background-color: hsla(41, 100%, 70%, 0.4);
   font-weight: bold;
-}
-
-html:lang(he) .nav-element {
-  font-size: 1.3em;
 }
 
 #lang-menu {
@@ -61,4 +56,8 @@ html:lang(he) .nav-element {
 
 #lang-menu:hover ul {
   display: block;
+}
+
+span {
+  font-size: 1em;
 }
